# meson_wrap_example

./: main.c  meson.build
subprojects/: enet-meson.tar.xz  enet.wrap
